--- a/templates/post_helper.tmpl
+++ b/templates/post_helper.tmpl
@@ -12,13 +12,14 @@
 
 <%def name="html_tags(post)">
     %if post.tags:
-        <ul class="simple">
+        <div class="callout secondary">
+        Tags:
         %for tag in post.tags:
           % if tag not in hidden_tags:
-            <li><a class="tag p-category" href="${_link('tag', tag)}" rel="tag">${tag|h}</a></li>
+            <span class="label"><a href="${_link('tag', tag)}" rel="tag">${tag|h}</span></li>
           % endif
         %endfor
-        </ul>
+        </div>
     %endif
 </%def>
 
