--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,5 +11,5 @@
 .blog-post .callout ul.menu.simple li a {
     display: inline; }
 
-menu > li:not(.menu-text) > a {
+.menu > li:not(.menu-text) > a {
     display: inline; }
