--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -16,6 +16,10 @@
     <div class="blog-post">
     <h3><a href="${post.permalink()}">${post.title()|h}</a> <small>${post.formatted_date(date_format)|h}</small></h3>
     <div>
+    % if not post.meta('nocomments') and site_has_comments:
+        <p class="commentline">${comments.comment_link(post.permalink(), post._base_path)}
+    % endif
+
     %if index_teasers:
         ${post.text(teaser_only=True)}
     %else:
