Making the footer small.
Fixes #5.

--- a/templates/base_footer.tmpl
+++ b/templates/base_footer.tmpl
@@ -4,7 +4,7 @@
 <%def name="html_footer()">
     %if content_footer:
         <footer id="footer">
-            <p>${content_footer}</p>
+            <p><small>${content_footer}</small></p>
             ${template_hooks['page_footer']()}
         </footer>
     %endif
