--- a/templates/list.tmpl
+++ b/templates/list.tmpl
@@ -1,11 +1,13 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.tmpl"/>
 
+<%block name="page_header">
+<h1>${blog_title|h}</h1>
+<h2>${title|h}</h2>
+</%block>
+
 <%block name="content">
 <article class="listpage">
-    <header>
-        <h1>${title|h}</h1>
-    </header>
     %if items:
 
     <ul class="menu vertical">
