--- a/templates/tag.tmpl
+++ b/templates/tag.tmpl
@@ -12,11 +12,14 @@
     %endif
 </%block>
 
+<%block name="page_header">
+<h1>${blog_title|h}</h1>
+<h2>${title|h}</h2>
+</%block>
 
 <%block name="content">
 <article class="tagpage">
     <header>
-        <h1>${title|h}</h1>
         %if description:
         <p>${description}</p>
         %endif
