--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -14,7 +14,7 @@
 <%block name="content_header"></%block>
 % for post in posts:
     <div class="blog-post">
-    <h3><a href="${post.permalink()}">${post.title()|h}</a> <small>${post.formatted_date(date_format)|h}</small></h3>
+    <h3><a href="${post.permalink()}">${post.title()|h}</a><br/><small>${post.formatted_date(date_format)|h}</small></h3>
     <div>
     % if not post.meta('nocomments') and site_has_comments:
         <p class="commentline">${comments.comment_link(post.permalink(), post._base_path)}
